--- a/prometeu/main_style.css
+++ b/prometeu/main_style.css
@@ -2,12 +2,12 @@
     font-family: Roboto;
     font-size: 20px;
 
-    --Primary_color: #730099;
-    --Secundary_color: #7ab10e;
-    --Hover_color: #a6db3bab;
-    --Background_color: #413f3f;
+    --Primary_color: #EE8B31;
+    --Secundary_color: #EE3136;
+    --Hover_color: #f72d34a2;
+    --Background_color: #ffffff;
     --Primary_font_color: #FFFFFF;
-    --Secundary_font_color: #ffffff;
+    --Secundary_font_color: #000000;
     --Shadow_color: rgba(0, 0, 0, 0.2);
     --Box_shadow: 0px 5px 5px var(--Shadow_color);
     --Box_shadow_alt: 0 -10px 10px -10px var(--Shadow_color);
@@ -23,8 +23,6 @@
 
 body{
     margin-bottom: 3rem;
-    display: flex;
-    justify-content: center;
 }
 
 *{
@@ -133,7 +131,6 @@ article{
     align-items: center;
     margin: 1rem;
     color: var(--Secundary_font_color);
-    max-width: 50rem;
 }
 
 article p{
@@ -200,7 +197,6 @@ aside{
     height: 80%;
     position: fixed;
     bottom: 3rem;
-    left: 0;
     margin: 0.3rem;
     border-radius: 1rem;
     box-shadow: var(--Box_shadow);
@@ -307,6 +303,8 @@ aside{
 .config{
     position: fixed;
     bottom: 3rem;
+    left: 0;
+    right: 0;
     height: 80%;
     margin: 0.3rem;
     background-color: var(--Primary_color);
@@ -341,7 +339,7 @@ aside{
 
 #wellcome{
     display: grid;
-    margin-bottom:3rem;
+    margin: 0.5rem 0.5rem 3rem 0.5rem;
     grid-template-areas:
                    "intro"
                    "sumario"
@@ -349,8 +347,6 @@ aside{
     gap: 1rem;
     align-items: center;
     justify-content: center;
-    max-width: 60rem;
-
 }
 
 .intro_bg{
@@ -373,7 +369,6 @@ aside{
 #sumary{
     grid-area: sumario;
     text-indent: 1rem;
-    color: var(--Primary_font_color);
 }
 
 .intro_links{
@@ -381,9 +376,6 @@ aside{
     grid-template: "h2 h2"
                    "link1 link2"
                    "linku linku";
-    max-width: 50rem;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .intro_links h2{
@@ -474,72 +466,6 @@ aside{
     max-height: 10rem;
 }
 
-/**Página dos artigos**/
-
-.container{
-    max-width: 50rem;
-    margin: 0.5rem 0.5rem 3rem 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
-}
-
-.container h2{
-    color: var(--Secundary_font_color);
-    margin: 1rem;
-}
-
-/** Vitrine dos artigos **/
-
-
-
-.showcase{
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    box-shadow: var(--Box_shadow_full);
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-
-}
-
-.showcase p{
-    margin: 0.5rem;
-    color: var(--Secundary_font_color);
-
-}
-
-.display{
-    overflow: hidden;
-    max-height: 7rem;
-    max-width: 100%;
-    margin: 0.5rem;
-    border-radius: 1rem;
-}
-
-.display img{
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    object-position: 50% 50%;
-    border-radius: 1rem;
-}
-
-.show-header{
-    background-color: var(--Primary_color);
-    color: var(--Primary_font_color);
-    border-radius: 1rem 1rem 0 0;    
-}
-
-.showcase:hover .show-header{
-    background-color: var(--Hover_color);
-}
-
-
-
-
 /** Tablets **/
 
 @media screen and (min-width: 600px){
@@ -570,6 +496,9 @@ aside{
 
     .intro_links{
         display: grid;
+        margin-left: 5%;
+        margin-right: 5%;
+
     }
 
     #wellcome{
@@ -586,8 +515,6 @@ aside{
         flex-flow: row-reverse;
         align-items: center;
         justify-content: space-evenly;
-        margin-left: 2rem;
-        margin-right: 2rem;
     }
 
     .intro img{
@@ -595,16 +522,9 @@ aside{
     }
 
     #sumary{
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
-
-    .display{
-        max-height: fit-content;
-        max-width: 20%;
-        float: right;
-    }
-    
 
 }
 
@@ -661,14 +581,10 @@ aside{
         top: 3rem;
 
     }
-
-    .container{
-        margin: 3rem 0.5rem 0.5rem 0.5rem ;
+    .intro_links{
+        margin-left: 20%;
+        margin-right: 20%;
     }
-
-    
-
-    
 
 }
 
@@ -679,11 +595,11 @@ aside{
         font-size: 30px;
     }
 
-    .config{
-        height: fit-content;
-    }
+    .intro_links{
+        height: 15rem;
+        width: 50rem;
 
-    
+    }
 
      
     
