--- a/main_style.css
+++ b/main_style.css
@@ -368,6 +368,53 @@ aside{
 
 }
 
+
+.search_long {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: var(--Primary_color);
+    height: 3rem;
+    margin: 0.5rem auto 0.5rem auto;
+    border-radius: 3rem;
+    box-shadow: var(--Box_shadow);
+}
+
+.search_long button{
+    height: 80%;
+    width: 20%;
+    margin-right: 0.3rem;
+    background-color: var(--Secundary_color);
+    border-style: none;
+    border-radius: 0 3rem 3rem 0;
+
+}
+
+.search_long input{
+    width: 80%;
+    height: 80%;
+    margin-left: 0.3rem;
+    border-style: none;
+    border-radius: 3rem 0 0 3rem;
+    text-indent: 1rem;
+    font-size: 1rem;
+}
+
+.search_long button:hover{
+    cursor: pointer;
+    background-color: var(--Hover_color);
+
+}
+
+.search_link {
+    color: var(--Primary_font_color);
+    text-decoration: underline;
+}
+
+.search_link:hover {
+    text-emphasis: dotted;
+}
 /** Menu de configurações **/
 
 .config{
