--- a/main_style.css
+++ b/main_style.css
@@ -75,7 +75,10 @@ i{
     border-radius: 1rem;
 }
 
-
+.selected_field{
+    background-color: var(--Secundary_color);
+    color: var(--Primary_font_color);
+}
 
 
 
@@ -268,7 +271,7 @@ aside{
     box-shadow: var(--Box_shadow);
     width: calc(100% - 0.6rem);
     animation-name: slide-up;
-    animation-duration: 0.4s;
+    animation-duration: 0.6s;
 
 }
 
@@ -361,7 +364,7 @@ aside{
     border-radius: 3rem;
     box-shadow: var(--Box_shadow);
     animation-name: slide-down_search;
-    animation-duration: 0.4s;
+    animation-duration: 0.6s;
 }
 
 .search_bar input{
@@ -453,8 +456,10 @@ aside{
     overflow-y: auto;
     width: fit-content;
     animation-name: slide-up;
-    animation-duration: 0.4s;
+    animation-duration: 0.6s;
 }
+
+
 
 .field{
     display: flex;
@@ -479,10 +484,6 @@ aside{
     cursor: pointer;
 }
 
-.selected_field{
-    background-color: var(--Secundary_color);
-    color: var(--selected_color);
-}
 
 .themes{
     display: flex;
