--- a/main_style.css
+++ b/main_style.css
@@ -20,6 +20,40 @@
     padding: 0;
 }
 
+@keyframes slide_down{
+    from{
+        top : -100%;
+        opacity: 0;
+    }
+    to{
+        top:3rem;
+        opacity: 1;
+    }
+}
+
+@keyframes slide_up{
+    from{
+        bottom : -100%;
+        opacity: 0;
+    }
+    to{
+        bottom:3rem;
+        opacity: 1;
+    }
+}
+
+@keyframes slide_down_search{
+    from{
+        top : -100%;
+        opacity: 0;
+    }
+    to{
+        top:0;
+        opacity: 1;
+    }
+}
+
+
 /** Atributos Globais **/
 
 body{
@@ -90,7 +124,7 @@ nav{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-
+    z-index: 2;
     background-color: var(--Primary_color);
     position: fixed;
     bottom: 0;
@@ -259,7 +293,7 @@ aside{
     border-radius: 1rem;
     box-shadow: var(--Box_shadow);
     width: calc(100% - 0.6rem);
-    animation-name: slide-up;
+    animation-name: slide_up;
     animation-duration: 0.6s;
 
 }
@@ -346,7 +380,7 @@ aside{
     margin: 0.5rem auto 0.5rem auto;
     border-radius: 3rem;
     box-shadow: var(--Box_shadow);
-    animation-name: slide-down_search;
+    animation-name: slide_down_search;
     animation-duration: 0.6s;
 }
 
@@ -438,7 +472,7 @@ aside{
     justify-content: center;
     overflow-y: auto;
     width: fit-content;
-    animation-name: slide-up;
+    animation-name: slide_up;
     animation-duration: 0.6s;
 }
 
@@ -819,6 +853,8 @@ aside{
         top: 3rem;
         height: 90%;
         width: 30rem;
+        animation-name: slide_down;
+        animation-duration: 0.6s;
     }
 
     .search_bar{
@@ -826,11 +862,14 @@ aside{
         top: 3rem;
         width: 45%;
         margin: 0.2rem;
+        animation-duration: 0.6s;
+        animation-name: slide_down;
     }
 
     .config{
         top: 3rem;
-
+        animation-name: slide_down;
+        animation-duration: 0.6s;
     }
 
     .container{
