--- a/main_style.css
+++ b/main_style.css
@@ -54,6 +54,32 @@
 }
 
 
+.openning{
+    animation-name: slide_up;
+    animation-duration: 600ms;
+    animation-fill-mode: forwards;
+}
+
+.closing{
+    animation-name: slide_up;
+    animation-duration: 600ms;
+    animation-fill-mode: forwards;
+    animation-direction: reverse;
+}
+
+.openning_search{
+    animation-name: slide_down_search;
+    animation-duration: 600ms;
+    animation-fill-mode: forwards;
+}
+
+.closing_search{
+    animation-name: slide_down_search;
+    animation-duration: 600ms;
+    animation-fill-mode: forwards;
+    animation-direction: reverse;
+}
+
 /** Atributos Globais **/
 
 body{
@@ -293,8 +319,7 @@ aside{
     border-radius: 1rem;
     box-shadow: var(--Box_shadow);
     width: calc(100% - 0.6rem);
-    animation-name: slide_up;
-    animation-duration: 0.6s;
+
 
 }
 
@@ -380,8 +405,7 @@ aside{
     margin: 0.5rem auto 0.5rem auto;
     border-radius: 3rem;
     box-shadow: var(--Box_shadow);
-    animation-name: slide_down_search;
-    animation-duration: 0.6s;
+
 }
 
 .search_bar input{
@@ -472,8 +496,7 @@ aside{
     justify-content: center;
     overflow-y: auto;
     width: fit-content;
-    animation-name: slide_up;
-    animation-duration: 0.6s;
+
 }
 
 
@@ -853,8 +876,7 @@ aside{
         top: 3rem;
         height: 90%;
         width: 30rem;
-        animation-name: slide_down;
-        animation-duration: 0.6s;
+
     }
 
     .search_bar{
@@ -862,14 +884,11 @@ aside{
         top: 3rem;
         width: 45%;
         margin: 0.2rem;
-        animation-duration: 0.6s;
-        animation-name: slide_down;
+
     }
 
     .config{
         top: 3rem;
-        animation-name: slide_down;
-        animation-duration: 0.6s;
     }
 
     .container{
@@ -880,7 +899,21 @@ aside{
         grid-template-columns: auto auto auto;
     }
 
-    
+    .openning{
+        animation-name: slide_down;
+    }
+
+    .closing{
+        animation-name: slide_down;
+    }
+
+    .openning_search{
+        animation-name: slide_down;
+    }
+
+    .closing_search{
+        animation-name: slide_down;
+    }
 
     
 
