--- a/main_style.css
+++ b/main_style.css
@@ -86,6 +86,7 @@ body{
     margin-bottom: 3rem;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 *{
@@ -437,11 +438,11 @@ aside{
 .search_long {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
+    justify-items: center;
+    width: 100vw;
     background-color: var(--Primary_color);
     height: 3rem;
-    margin: 0.5rem auto 0.5rem auto;
+    margin: 0.5rem auto 1rem auto;
     border-radius: 3rem;
     box-shadow: var(--Box_shadow);
 }
@@ -683,7 +684,7 @@ aside{
 /**Página dos artigos**/
 
 .container{
-    max-width: 50rem;
+    width: 100%;
     margin: 0.5rem 0.5rem 3rem 0.5rem;
     display: flex;
     justify-content: center;
@@ -694,6 +695,10 @@ aside{
 .container h2{
     color: var(--Secundary_font_color);
     margin: 1rem;
+}
+
+.container i{
+    color: var(--Secundary_font_color) !important; 
 }
 
 /** Vitrine dos artigos **/
@@ -893,6 +898,7 @@ aside{
 
     .container{
         margin: 3rem 0.5rem 0.5rem 0.5rem ;
+        width: 70vw;
     }
 
     .card_container{
@@ -913,6 +919,11 @@ aside{
 
     .closing_search{
         animation-name: slide_down;
+    }
+
+    .search_long{
+        width: 100%;
+
     }
 
     
